# n8n-Contractor-Training-Modules

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  WORKFLOW_SETUP.md  docker-compose.yml  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
archive/: Contractor Training Resources.tsx
blueprints/: README.md  index.json  manifest.json
blueprints/basic/: http-request.json  scheduler.json  webhook-response.json
blueprints/integrations/: au-nrp-contractor-onboarding-orchestrated.json  au-nrp-contractor-onboarding.json  github-n8n-auto-import.json  github-n8n-auto-sync-upsert.json  github-sheets.template.json
docs/: PhotoAlbumApp.plan.md  PhotoAlbumApp.spec.md  api-setup-guide.md  api-token-setup.md  github-auto-import-setup.md  github-auto-sync-setup.md  mcp-setup.md  n8n-setup.md  quickstart.md  spec-driven.md  spec-kit-integration-plan.md  technical-implementation-plan.md
flows/: example.json  github-slack.json
scripts/: mcp-validate.ps1  n8n-api.ps1  setup-env.ps1  smoke.ps1  start-n8n.ps1  stop-n8n.ps1
scripts/wizard/: deploy-au-nrp-env.ps1  deploy-au-nrp-orchestrated.ps1  deploy-au-nrp.ps1  deploy-blueprint.ps1  deploy-github-auto-import.ps1  deploy-github-auto-sync.ps1  manifest-deploy.ps1  new-from-blueprint.ps1  quick-deploy.ps1
scripts/workflows/: apply-cli.ps1  apply.ps1
src/specify_cli/: __about__.py  __init__.py  main.py
